--- a/Nivell1.html
+++ b/Nivell1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercici 1 - Xavier Bonilla Moliner</title>
-    <link rel="stylesheet" type="text/css" href="/CSS/Ex1.css">
+    <link rel="stylesheet" type="text/css" href="CSS\Ex1.css">
 </head>
 
 <body>
